# Teknic-ClearPath-SC-ROS

./: .gitignore  README.md  clearpath.code-workspace
Exar_USB_Serial_Kernel_Driver/: .cache.mk  .xr_usb_serial_common.ko.cmd  .xr_usb_serial_common.mod.o.cmd  .xr_usb_serial_common.o.cmd  modules.order  xr_usb_serial_common.c  xr_usb_serial_common.ko  xr_usb_serial_common.mod.c  xr_usb_serial_hal.c
Exar_USB_Serial_Kernel_Driver/.tmp_versions/: xr_usb_serial_common.mod
src/clearpath/: CMakeLists.txt  SC_Linux_Files.tar  hubDriverPkg.tar  package.xml
src/clearpath/ExarKernelDriver/: README.txt
src/clearpath/example/ROS_Examples/Publisher/: Pub.cpp
src/clearpath/example/ROS_Examples/Subscriber/: Sub.cpp
src/clearpath/example/SDK_Examples/SingleThread/: Axis.cpp  SingleThreaded.cpp
src/clearpath/include/ROS_Driver/inc/: sFoundation_ROS.h
src/clearpath/include/ROS_Driver/src/: sFoundation_ROS.cpp
src/clearpath/launch/: client.launch
src/clearpath/msg/: ClearpathClient.msg  Port.msg  Servo.msg
src/clearpath/src/: example.cpp  main.cpp
src/clearpath/src/ROS_Examples/Joystick/: teleop.cpp
src/clearpath/src/ROS_Examples/Publisher/: Pub.cpp
src/clearpath/src/ROS_Examples/Subscriber/: Sub.cpp
src/clearpath/src/SDK_Examples/SingleThread/: Axis.cpp  Axis.h
src/joystick_bridge/: CMakeLists.txt  package.xml
src/joystick_bridge/launch/: teleop.launch
src/joystick_bridge/src/: joystick.cpp
