<?xml version="1.0"?>
<package>
  <name>clearpath</name>
  <version>0.0.1</version>
  <description>Teknic Clearpath-SC's sFoundation ROS Integration </description>
  <maintainer email="murat.terzi01@gmail.com">Murat Terzi</maintainer>
  <author email="murat.terzi01@gmail.com">Murat Terzi</author>
  <license>GPLv3</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <run_depend>roscpp</run_depend>
  <export></export>
</package>
